# cov-project

./: .coverage  pyproject.toml
pytest_proj/: .coverage  get.py  index_of.py  my_slice.py
tests/: .coverage  test_get.py  test_get_for_default.py  test_get_for_none_default.py  test_index_of.py  test_index_of_2.py  test_my_slice_2.py  test_slice.py
